--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html && node zip.js"
   },
   "devDependencies": {
     "@parcel/compressor-gzip": "^2.6.2",
     "@parcel/reporter-bundle-analyzer": "^2.6.2",
+    "advzip-bin": "^2.0.0",
+    "archiver": "^5.3.1",
+    "chalk": "^4.0.1",
     "parcel": "^2.6.2"
   }
 }
