--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install and Build 🔧 
-        run: |
-          yarn
-          yarn build
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          run: |
+            yarn
+            yarn build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
