--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,15 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install and Build 🔧 
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
-          run: |
-            yarn
-            yarn build
+          node-version: 18
+          
+      - name: Install and Build 🔧 
+        run: |
+          yarn
+          yarn build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
