--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js13-2022",
   "version": "1.0.0",
-  "repository": "https://github.com/Harmades/js13-2022.git",
-  "author": "Adrian Lissot <adrianlissot@microsoft.com>",
+  "repository": "https://github.com/Harmades/js13k-2022.git",
+  "author": "Adrian Lissot",
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
