--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "advzip-bin": "^2.0.0",
     "archiver": "^5.3.1",
     "chalk": "^4.0.1",
-    "parcel": "^2.6.2"
+    "parcel": "^2.6.2",
+    "prettier": "^2.7.1"
   }
 }
