--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
     "author": "Adrian Lissot",
     "license": "MIT",
     "scripts": {
-        "start": "parcel src/index.html",
-        "build": "parcel build src/index.html --no-source-maps --public-url ./ && node zip.js"
+        "start": "tsc --noEmit && parcel src/index.html",
+        "build": "tsc --noEmit && parcel build src/index.html --no-source-maps --public-url ./ && node zip.js"
     },
     "devDependencies": {
         "@parcel/compressor-gzip": "^2.6.2",
         "@parcel/reporter-bundle-analyzer": "^2.6.2",
+        "@tsconfig/recommended": "^1.0.1",
         "advzip-bin": "^2.0.0",
         "archiver": "^5.3.1",
         "chalk": "^4.0.1",
         "parcel": "^2.6.2",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "typescript": "^4.8.2"
     }
 }
